# e-learning

./: .coveragerc  .env  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini
.aws/: task-definition.json
.github/workflows/: deploy.yaml
src/certificates/: apis.py  apps.py  factories.py  models.py  serializers.py  services.py  test_certificate.py
src/certificates/migrations/: 0001_initial.py
src/classes/: apis.py  apps.py  factories.py  models.py  serializers.py  services.py  tasks.py  test_classes.py
src/classes/migrations/: 0001_initial.py
src/config/: __init__.py  api_routers.py  celery.py  settings.py  urls.py
src/config/settings/: __init__.py
src/core/: apis.py  apps.py  constants.py  exception.py  exception_handler.py  factories.py  mixins.py  models.py  paginations.py  schema.py  serializers.py
src/core/tests/: __init__.py
src/courses/: apis.py  apps.py  factories.py  filters.py  models.py  permissions.py  serializers.py  services.py  test_courses.py  tests.py
src/courses/migrations/: 0001_initial.py  0002_enrollment.py
src/courses/tests/: test_courses.py  test_enrollments.py
src/dashboard/: apis.py  apps.py  serializers.py  services.py  test_dashboard.py
src/lessons/: apis.py  apps.py  factories.py  models.py  permissions.py  serializers.py  services.py  test_lessons.py  tests.py
src/quizzes/: apis.py  apps.py  factories.py  models.py  serializers.py  services.py  test_quizzes.py
src/users/: apis.py  apps.py  factories.py  models.py  serializers.py
(+21 files in other folders)
