[project]
name = "backend-improving"
version = "0.1.0"
description = "Backend improvement project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery[redis,sqs]>=5.5.2",
    "django>=5.2",
    "django-celery-beat>=2.8.0",
    "django-filter>=25.1",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "drf-spectacular>=0.28.0",
    "ruff>=0.11.7",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=5.1.0",
    "factory-boy>=3.3.3",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-django>=4.11.1",
    "ruff>=0.11.7",
]
